--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
     .site-header {
         min-height: 450px;
       /*  background-color: $brand-color; */
-        background-image: url('//moskva.goroda.vip/images/msk.jpg');
+        background-image: url('//lipetsk.goroda.vip/images/lip.jpg');
         background-size: cover;
         background-position: center -170px;
         background-attachment: fixed;
